@@ -1,4 +1,4 @@
-#	$NetBSD: files,v 1.1214 2018/10/15 23:50:48 jmcneill Exp $
+#	$NetBSD: files,v 1.1215 2018/10/19 21:09:10 jakllsch Exp $
 #	@(#)files.newconf	7.5 (Berkeley) 5/10/93
 
 version 	20171118
@@ -1385,6 +1385,10 @@ file	dev/ic/bwfm.c			bwfm
 # QEMU Firmware Configuration (fw_cfg) device
 device	qemufwcfg
 file	dev/ic/qemufwcfg.c		qemufwcfg
+
+# AMD Cryptographic Coprocessor
+device	amdccp
+file	dev/ic/amdccp.c			amdccp
 
 # legitimate pseudo-devices
 #
